--- a/Copy_of_sum_10_pytorch_one_layer_3_node.ipynb
+++ b/Copy_of_sum_10_pytorch_one_layer_3_node.ipynb
@@ -6,7 +6,7 @@
       "name": "Copy of sum_10_pytorch_one_layer_3_node.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNXEYJyy9A3kdIR2J54L+bS",
+      "authorship_tag": "ABX9TyPk2Ql8mMNkiTuW3ZSYlOYj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -498,7 +498,7 @@
         "colab_type": "text"
       },
       "source": [
-        "红线波动近似随机。 这里面我用了100个node来学习两个数字十以内的加法。 之前发现十以内的加法完全可以由两个node习得。这么复杂的模型显然是没有必要的。 这里面的红线波动近似随机 我猜想是因为模型随机生成了一个权重 然后每个node的信号输进来加加减减最后得出真实的数字。 多少node都可以做 两个的话一加一减就够了 如果有一百个那也是一百个数字的加减 没有本质的区别。\n"
+        "红线波动近似随机。 这里面我用了3个node来学习两个数字十以内的加法。结果发现跟100的比较起来没有本质区别 说明有的时候多余的权重只会让信息更加稀疏降低效率。 这个发现也印证了模型压缩的可行性。这算是这次实验的发现。"
       ]
     },
     {
